# mithra.ai

./: AUTOFILL_VOICE_INTEGRATION.md  AUTOFILL_VOICE_SUMMARY.md  COMPLETE_VOICE_SYSTEM.md  LIVE_QUERY_LOGGING.md  MAGIC_FILL_SETUP.md  TEST_VOICE_MIC_BUTTON.md  VOICE_LIVE_QUERY_INTEGRATION.md  VOICE_MIC_QUICK_START.md  main.py  pyproject.toml
backend/: .env  .env.example  list_models.py  main.py  pyproject.toml  test_structured_filling.py
backend/%TEMP%\chrome_cdp_profile/: Local State  SingletonCookie  SingletonLock  SingletonSocket
backend/%TEMP%\chrome_cdp_profile/Default/: BrowsingTopicsState  Cookies  DIPS  DIPS-wal  Favicons  History  History-journal  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  TransportSecurity  Web Data  passkey_enclave_state
backend/%TEMP%\chrome_cdp_profile/GrShaderCache/: data_0  data_1  f_000001  index
backend/%TEMP%\chrome_cdp_profile/GraphiteDawnCache/: data_1  index
backend/%TEMP%\chrome_cdp_profile/Safe Browsing/: ChromeExtMalware.store  ChromeExtMalware.store.32_13418886637603668  UrlBilling.store  UrlBilling.store.4_13418890273901039  UrlCsdDownloadAllowlist.store  UrlMalBin.store  UrlMalBin.store.4_13418890273902526  UrlMalware.store  UrlMalware.store.4_13418890273895699  UrlSoceng.store  UrlUws.store  UrlUws.store.4_13418890273897217
backend/agent/: browser_automation.py  live_agent.py  merge_web_rag_agent.py  navigation_agent.py  pdf_image_process.py  retriver_service.py  structured_data_filling.py  vision_magic_fill.py  voice_agent.py  web_agent.py
backend/public/: user_data.txt
(+466 files in other folders)
