[project]
name = "mithra-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.115.0",
    "google-api-python-client>=2.187.0",
    "google-auth>=2.45.0",
    "google-auth-oauthlib>=1.2.2",
    "google-generativeai>=0.8.6",
    "httpx>=0.27.0",
    "langchain>=1.2.0",
    "langchain-classic>=1.0.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.6",
    "langchain-experimental>=0.4.1",
    "langchain-google-genai>=4.1.2",
    "langchain-groq>=1.1.1",
    "langchain-text-splitters>=1.1.0",
    "neo4j>=6.0.3",
    "pdf2image>=1.17.0",
    "pillow>=12.1.0",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-dotenv>=0.9.9",
    "python-multipart>=0.0.12",
    "rank-bm25>=0.2.2",
    "uvicorn[standard]>=0.32.0",
]
